# distancecalculator

./: .clang-format  .gitmodules  .travis.yml  CMakeLists.txt  README.md  TODO.md  build.sh  hello.cpp  main.cpp  testmain.cpp
.github/workflows/: superlint.yml
benchmark/csvreader/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  hello.h  main.cpp
src/common/: CMakeLists.txt  Path.hpp  Range.hpp  Utility.cpp  Utility.hpp
src/engine/: CMakeLists.txt  CPPThreadsDistanceCalculatorEngine.hpp  CUDADistanceCalculatorEngine.hpp  DistanceCalculator.hpp  DistanceCalculatorEngineFactory.hpp  DistanceCalculatorEngineKind.hpp  DistanceCalculatorEngineMetricKind.hpp  DistanceCalculatorEngineType.hpp  IDistanceCalculatorEngine.hpp  MPIDistanceCalculatorEngine.hpp  SequentialDistanceCalculatorEngine.hpp
src/engine/cuda/: CMakeLists.txt  MatrixDifference.cu  MatrixDifference.cuh
src/engine/cuda/experiments/: CMakeLists.txt  addition.cu
src/engine/stdthreads/: CMakeLists.txt  HammingDistance.hpp  LNMetric.hpp  MetricBase.hpp
src/readers/: CMakeLists.txt  CSVReader.cpp  CSVReader.hpp  ICSVReader.hpp
src/structures/: CMakeLists.txt  CSVContainer.cpp  CSVContainer.hpp
src/threadpool/: CMakeLists.txt  Semaphore.hpp  ThreadPool.hpp
test/: CMakeLists.txt  CSVContainer_test.cpp  CSVReader_test.cpp  CSVUtilities_test.cpp  TestConfig.hpp  ThreadPool_test.cpp  testmain.cpp
test/data/csv/: generate.py  test_data.csv
